--- a/index.html
+++ b/index.html
@@ -5,53 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fasting Tracker</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icons/icon-192.png" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div class="app">
     <div class="header">
-      <div class="moon-icon">🌙</div>
-      <h1>Ready for your next fast?</h1>
-      <p>Select a plan below to get started.</p>
+      <h1>Fasting Tracker</h1>
+      <button id="theme-toggle">Toggle Theme</button>
+      <select id="timer-type">
+        <option value="digital">Digital Timer</option>
+        <option value="analog">Analog Timer</option>
+      </select>
     </div>
 
-    <div class="plans">
-      <div class="plan-card selected" data-hours="16">
-        <h3>16:8 Intermittent (16 hours)</h3>
-        <p>Fast for 16 hours, eat in an 8-hour window.</p>
-      </div>
-      <div class="plan-card" data-hours="18">
-        <h3>18:6 Intermittent (18 hours)</h3>
-        <p>Fast for 18 hours, eat in a 6-hour window.</p>
-      </div>
-      <div class="plan-card" data-hours="20">
-        <h3>20:4 Warrior Diet (20 hours)</h3>
-        <p>Fast for 20 hours, eat in a 4-hour window.</p>
-      </div>
-      <div class="plan-card" data-hours="13">
-        <h3>13-Hour Circadian (13 hours)</h3>
-        <p>Align your eating with your sleep/wake cycle.</p>
-      </div>
-      <div class="plan-card" data-hours="36">
-        <h3>36-Hour Monk Fast (36 hours)</h3>
-        <p>A full day of fasting for metabolic reset.</p>
-      </div>
+    <div class="plan-selector">
+      <label for="plan">Select Fasting Plan:</label>
+      <select id="plan">
+        <option value="16">16:8 Intermittent (16 hours)</option>
+        <option value="18">18:6 Intermittent (18 hours)</option>
+        <option value="13">13-Hour Circadian</option>
+        <option value="36">36-Hour Monk Fast</option>
+      </select>
     </div>
 
-    <button id="start-btn">⚡ Start 16-Hour Fast</button>
-
-    <div class="timer-display">
-      <span id="timer">00:00:00</span>
+    <div class="timer">
+      <canvas id="analog-timer" width="200" height="200" style="display: none;"></canvas>
+      <span id="digital-timer">00:00:00</span>
     </div>
 
-    <div class="control-btns">
+    <div class="controls">
+      <button id="start-btn">Start Fast</button>
       <button id="stop-btn" disabled>Stop Fast</button>
     </div>
 
     <div class="achievements">
-      <h2>🏆 Achievements</h2>
+      <h2>Achievements</h2>
       <ul id="achievements-list"></ul>
+    </div>
+
+    <div class="history">
+      <h2>Fasting History</h2>
+      <canvas id="history-chart" width="400" height="200"></canvas>
     </div>
   </div>
 
